--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ main{
   display: flex;
   align-items: center;
   justify-content: center;
+  
 
   & > label{
     cursor: pointer;
@@ -87,3 +88,54 @@ main{
     cursor: pointer;
   }
 }
+
+#create-todo-section{
+  width: 100%;
+ 
+}
+
+
+#create-todo-form{
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+ 
+
+}
+
+.input-description{
+  height: 3.2rem;
+  width: 100%;
+  font-size: 1.6rem;
+  border-radius: .4rem;
+  margin-right: .4rem;
+  outline: 0;
+  border: 1px solid #646464;
+  padding-left:.8rem ;
+
+  &:focus{
+    border-color: #5eb7f6;
+
+}
+
+
+
+}
+
+.add-task-btn{
+  box-sizing: border-box;
+  height: 3.6rem;
+  width: 3.6rem;
+  color: #fff;
+  background:#8f49e7;
+  border: none;
+  border-radius:.4rem ;
+  font-size: 2.4rem;
+  cursor: pointer;  
+
+  &:hover{
+    opacity: .8;
+}   
+
+} 
